Use non-modal message widget for externally modified file notifications

No more modal dialogs for externally modified changes that can
acidentally be pressed while typing.

For Kate, nothing changes if you have "[x] Warn about files modified
by foreign processes" enabled.

Differential Revision: D2700

Fixed-In: KDE Frameworks 5.27
BUG: 309493
BUG: 351932
CCBUG: 353712